--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,31 +1,52 @@
-/*!
- * Start Bootstrap - Busines Frontpage (https://startbootstrap.com/template-overviews/business-frontpage)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-business-frontpage/blob/master/LICENSE)
- */
-
- @media (max-width: 768px) {
-
-  .weather-header {
-  }
-  
+.jumbotron {
+  margin-bottom: 0px;
 }
 
-  @media (min-width: 768px) {
+.input-group {
+  margin-left: auto;
+  margin-right: auto;
+}
 
-    .weather-header {
-      height: 50vh;
-      min-height: 300px;
-      background: url('https://images.pexels.com/photos/531767/pexels-photo-531767.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center center no-repeat scroll;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      background-size: cover;
-      -o-background-size: cover;
-    }
-    
-  }
+.input-group-append {
+  margin-left: auto;
+  margin-right: auto;
+}
 
-  .jumbotron {
-    margin-bottom: 0px;
-  }
+.btn {
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.data-header {
+  padding-bottom: 2em;
+  background-image: url("https://images.pexels.com/photos/314726/pexels-photo-314726.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  height: 100%; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.container-fluid {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.list-group {
+  text-align: center;
+}
+
+.card-img-top {
+  position: relative;
+  float: left;
+  width:  100px;
+  height: 100px;
+  background-position: 50% 50%;
+  background-repeat:   no-repeat;
+  background-size:     cover;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card.col-sm-12 {
+  margin-top: 20px;
+}
